# robocup2014

./: .rosinstall  README.md  params.yaml
basic_states/basic_states/: CMakeLists.txt  package.xml
basic_states/face_states/: .project  CMakeLists.txt  Face_readme.py  package.xml  setup.py
basic_states/gesture_states/: .project  CMakeLists.txt  gesture_readme.py  package.xml  setup.py
basic_states/hri_states/: .project  CMakeLists.txt  package.xml  setup.py
basic_states/manipulation_states/: .project  .pydevproject  CMakeLists.txt  manipulation_readme.py  package.xml  setup.py
basic_states/manipulation_states/config/: reem_motions.yaml
basic_states/manipulation_states/launch/: play_motion_params.launch
basic_states/navigation_states/: .project  CMakeLists.txt  navigation_readme.py  package.xml  setup.py
basic_states/navigation_states/scripts/: cancel_goal.py
basic_states/navigation_states/src/: get_current_robot_pose.py  state_conc.py
basic_states/navigation_states/srv/: NavigationGoBack.srv  NavigationGoForward.srv  NavigationGoTable.srv  NavigationTurn.srv
basic_states/object_grasping_states/: .project  CMakeLists.txt  object_grasping_readme.py  package.xml  setup.py
basic_states/object_states/: .project  CMakeLists.txt  package.xml  setup.py
basic_states/person_states/: .project  CMakeLists.txt  package.xml  person_readme.py
basic_states/speech_states/: .project  CMakeLists.txt  package.xml  setup.py  speech_readme.py
basic_states/speech_states/grammar/: deliver.gram  drinks.gram  firstgram.gram  followme.gram  full.dic  general.gram  listenword.gram  yes_no.gram
basic_states/util_states/: .project  CMakeLists.txt  package.xml  setup.py  util_readme.py
example_sm_pkg/: .project  CMakeLists.txt  README.md  mainpage.dox  manifest.xml  package.xml
example_sm_pkg/launch/: robot_inspection_example_sm.launch
example_sm_pkg/nodes/: actionserver_example.py  service_example.py  subscriber_publisher_class_example.py
example_sm_pkg/scripts/: robot_inspection_example.py  super_state_machine.py
odom_moving/: .project  CMakeLists.txt  package.xml
odom_moving/launch/: odom_movings.launch
odom_moving/scripts/: straight_node.py  turn_node.py
odom_moving/srv/: Straight.srv  Turn.srv
reem_mocks/asr_mock/: .project  CMakeLists.txt  package.xml
reem_mocks/asr_mock/src/: asr_movk_v2.py  asr_srv.py  asr_srv_.py  tags.txt
reem_mocks/asr_mock/stuff/: asr_server_rosservice.txt
reem_mocks/face_detection/: .project  CMakeLists.txt  package.xml
reem_mocks/face_detection/src/: face_recognition.py
reem_mocks/face_detection_fake/: CMakeLists.txt  package.xml
reem_mocks/face_detection_fake/scripts/: .project  face_recognition_fake.py
reem_mocks/gesture_detection_mock/: .project  CMakeLists.txt  package.xml
reem_mocks/gesture_detection_mock/msg/: Gesture.msg
reem_mocks/gesture_detection_mock/src/: gesture_detect_mock.py
reem_mocks/grasping_mock/: .project  CMakeLists.txt  package.xml
reem_mocks/grasping_mock/action/: ObjectManipulation.action
reem_mocks/grasping_mock/msg/: ObjectDetection.msg  (+2 more)
reem_mocks/object_mock/: .project  CMakeLists.txt  package.xml  setup.py
reem_mocks/person_detection/: .project  CMakeLists.txt  package.xml
reem_mocks/reem_mocks/: CMakeLists.txt  package.xml
reem_mocks/tts_mock/: CMakeLists.txt  package.xml
speed_limit/: CMakeLists.txt  package.xml  setup.py
speed_limit/action/: Disable.action
stage_1/basic_funcionalities/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
stage_1/basic_functionalities/: .project  CMakeLists.txt  package.xml  setup.py
stage_1/emergency_situation/: .project  CMakeLists.txt  package.xml  setup.py
stage_1/follow_me/: .project  CMakeLists.txt  package.xml  setup.py
stage_1/robozoo/: .project  CMakeLists.txt  package.xml
stage_1/stage_1/: .project  CMakeLists.txt  package.xml
stage_2/: docuGpsrSoar
stage_2/cocktail_party/: .project  CMakeLists.txt  package.xml
stage_2/gpsr/: .project  action_msg.msg  general.gram  mainpage.dox  manifest.xml  sm_gpsr_orders
stage_2/gpsrSoar/: .project  docuGpsrSoar
stage_2/restaurant/: .project  CMakeLists.txt  package.xml  setup.py
stage_2/soar9.3.2/: test_sml.py
stage_2/stage_2/: CMakeLists.txt  package.xml
stage_setup/robot_inspection/: .project  CMakeLists.txt  package.xml
stage_setup/stage_setup/: CMakeLists.txt  package.xml
test_scripts/basic_states_tests/: .project  CMakeLists.txt  package.xml
test_scripts/stage_1_test/: CMakeLists.txt  package.xml  package.xml~
test_scripts/stage_2_test/: .project  .project~  CMakeLists.txt  package.xml
util_scripts/: .project  CMakeLists.txt  package.xml
util_scripts/scripts/: create_pois.py  pois_visualizer.py
(+621 files in other folders)
