<?xml version="1.0"?>
<package>
  <name>example_sm_pkg</name>
  <version>0.0.1</version>
  <description>The example_sm_pkg package</description>

  <maintainer email="sammypfeiffer@gmail.com">Sammy Pfeiffer</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>

</package>