<?xml version="1.0"?>
<package>
  <name>reem_mocks</name>
  <version>0.0.0</version>
  <description>The reem_mocks package that will contain all the fake servers of the services running on the robot not available in open source</description>
  <maintainer email="sam.pfeiffer@pal-robotics.com">Sam Pfeiffer</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <metapackage/>
  </export>
</package>